# kautsky

./: .gitignore  .nojekyll  CLAUDE.md  Makefile  Plan.md  editorial.html  index.html  prologue.html  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: publish.yml
assets/: parallel.css
book/: _quarto.yml  index.qmd
book/chapters/: ch1.qmd  ch2.qmd  ch3.qmd  ch4.qmd  ch5.qmd  vorwort-04.qmd  vorwort-92.qmd
chapters/: ch1.html  ch2.html  ch3.html  ch4.html  ch5.html  vorwort-04.html  vorwort-92.html
data/: blocks.jsonl
erfurter-programm/: editorial.html  index.html  prologue.html
erfurter-programm/chapters/: ch1.html  ch2.html  ch3.html  ch4.html  ch5.html  vorwort-04.html  vorwort-92.html
oekonomische-lehren/: index.html
oekonomische-lehren/chapters/: ab1-kap1.html  ab1-kap2.html  ab1-kap3.html  ab2-kap01.html  ab2-kap02.html  ab2-kap03.html  ab2-kap04.html  ab2-kap05.html  ab2-kap06.html  ab2-kap07.html  ab2-kap08.html  ab2-kap09.html  ab2-kap10.html  ab3-kap1.html  ab3-kap2.html  ab3-kap3.html  ab3-kap4.html  ab3-kap5.html  ab3-kap6.html  ab3-kap7.html  vorwort1.html  vorwort4.html  vorwort8.html
pipeline/: 01_scrape.py  02_segment.py  03_translate.py  04_qa_check.py  05_generate_qmd.py  06_generate_epub.py  common.py
shared/: glossary.yaml
site/: _quarto.yml  editorial.qmd  index.qmd  prologue.qmd
site/assets/: parallel.css
site/chapters/: ch1.qmd  ch2.qmd  ch3.qmd  ch4.qmd  ch5.qmd  vorwort-04.qmd  vorwort-92.qmd
site/erfurter-programm/: editorial.qmd  index.qmd  prologue.qmd
site/oekonomische-lehren/: index.qmd
(+71 files in other folders)
