[project]
name = "marxists-translations"
version = "0.1.0"
description = "Parallel DE/EN translations of German Marxist works from marxists.org"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.90",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pyyaml>=6.0",
    "requests>=2.31",
]
